finished first swagger api documentation
